--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "verano-link",
   "version": "0.1.0",
+  "homepage" : "http://nplazas4.github.io/verano-link",
   "private": true,
   "dependencies": {
     "@amcharts/amcharts4": "^4.9.1",
@@ -32,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "terser-brunch": "^4.0.0"
   }
 }
